[package]
name = "vec3"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]

[dependencies]
derive_more = "*"
rand = { version = "0.8.3", optional = true }
